# rust-beginners-course

./: Cargo.toml  README  README.md
section_01_basics/ch_01_hello_world/src/: main.rs
section_01_basics/ch_02_types_variables/src/: main.rs
section_01_basics/ch_03_functions/src/: main.rs
section_01_basics/ch_04_modules/src/: main.rs  meetings.rs
section_01_basics/ch_04_modules/src/greetings/: evening.rs  mod.rs  morning.rs
section_01_basics/ch_04_modules/src/greetings/special/: holiday.rs
section_01_basics/exercise_module/src/: config.rs  main.rs
section_01_basics/exercise_module/src/models/: product.rs  user.rs
section_01_basics/exercise_module/src/services/: auth.rs  payment.rs
section_02_control_ownership/ch_01_ifelse_condition/src/: main.rs
section_02_control_ownership/ch_02_match_condition/src/: main.rs
section_02_control_ownership/ch_03_loop/src/: main.rs
section_02_control_ownership/ch_04_stack_heap/src/: main.rs
section_02_control_ownership/ch_05_ownership_borrowing/src/: main.rs
section_02_control_ownership/ch_06_ownership_borrowing_recap/: Cargo.toml
section_02_control_ownership/ch_06_ownership_borrowing_recap/src/: main.rs
section_02_control_ownership/ch_06_ownership_borrowing_recap/src/borrowing/: sample.rs
section_02_control_ownership/exercise/src/: calculator.rs  main.rs
section_03_collections_errors/ch_01_vector/: Cargo.toml
section_03_collections_errors/ch_01_vector/src/: main.rs
section_03_collections_errors/ch_02_string/: Cargo.toml
section_03_collections_errors/ch_02_string/src/: main.rs
src/: main.rs
(+2 files in other folders)
